started implementing api handler