@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.kapt'
     id 'java-library'
     //TODO remove
     id 'application'
@@ -17,10 +18,20 @@ dependencies {
     implementation 'io.vertx:vertx-web-openapi'
     implementation 'org.webjars:swagger-ui:3.37.2'
     runtimeOnly 'ch.qos.logback:logback-classic'
+    implementation 'org.mapstruct:mapstruct'
+    kapt 'org.mapstruct:mapstruct-processor'
 
     testImplementation 'io.vertx:vertx-junit5'
     testImplementation 'io.vertx:vertx-web-client'
     testImplementation 'org.assertj:assertj-core'
+}
+
+//TODO centralize
+kapt {
+    javacOptions {
+        option("--enable-preview")
+        option("--module-path", compileJava.classpath.asPath)
+    }
 }
 
 //TODO remove
@@ -30,5 +41,6 @@ application {
 
 //TODO remove
 run {
+    jvmArgs = ['--enable-preview']
     args = ['run', 'codes.fdk.blueprint.api.infrastructure.web.openapi.WebOpenapiVerticle', "--launcher-class=${application.mainClassName}"]
 }
